completed home and weapon pages

--- a/weapons.html
+++ b/weapons.html
@@ -7,7 +7,34 @@
 </head>
 
 <body>
-    Hello, World!
-</body>
+    <div class="topnav">
+        <a href="./index.html">Monster Hunter: World</a>
+        <a class="active" href="./weapons.html">Weapons</a>
+        <a href="./about.html">About</a>
+    </div>
 
-</html>
+    <div class="content">
+        <img src="http://www.monsterhunterworld.com/images/top/title.png" width="256px" style="float: left; margin-right: 32px;" />
+        <h1>The Hunter's Arsenal</h1>
+        There are fourteen different weapons at the hunter's disposal, each with its own unique characteristics and attacks. Many hunters acquire proficiency in multiple types, while others prefer to attain mastery of one.<br><br>
+
+        <i>A total of <b>14 Weapons</b> are in the game: 11 Blademaster Weapons and 3 Gunner Weapons.</i>
+        <ol class="weapon-list">
+            <li><b>Great Sword</b>: Large, powerful but slow heavy-damagers</li>
+            <li><b>Sword & Shield</b>: Balanced, mobile & beginner friendly</li>
+            <li><b>Dual Blades</b>: Light but extremely fast flurry of attacks.</li>
+            <li><b>Long Sword</b>: Nimble and with great melee range</li>
+            <li><b>Hammer</b>: Slow but heavy & stunning attacks</li>
+            <li><b>Hunting Horn</b>: Easy and long range support weapon</li>
+            <li><b>Lance</b>: Strong Defense and Offense</li>
+            <li><b>Gunlance</b>: High offense, limited range</li>
+            <li><b>Switch Axe</b>: Versatile, fast & elemental damage.</li>
+            <li><b>Charge Blade</b>: Versatile, powerful and fast</li>
+            <li><b>Insect Glaive</b>: Mobile, aerial attacks and buffs</li>
+            <li><b>Bow</b>: Fast, ranged debuff attacks.</li>
+            <li><b>Light Bowgun</b>: High mobility, rapid fire ranged weapon</li>
+            <li><b>Heavy Bowgun</b>: Slow but powerful ranged attacks.</li>
+        </ol>
+        <img src="./images/MHW_hunters.jpg" width="50%" />
+    </div>
+</body>
