--- a/index.html
+++ b/index.html
@@ -7,9 +7,34 @@
 </head>
 
 <body>
-    <img src="http://www.monsterhunterworld.com/images/top/title.png" width="10%" />
-    <h1>Monster Hunter: World</h1>
-    <img src="images/wallpaper.png" width="50%" />
+    <div class="topnav">
+        <a class="active" href="./index.html">Monster Hunter: World</a>
+        <a href="./weapons.html">Weapons</a>
+        <a href="./about.html">About</a>
+    </div>
+
+    <div class="content">
+        <img src="images/wallpaper.png" width="75%" style="float: left; margin-right: 32px;" />
+        <h1>Monster Hunter: World</h1>
+        <p>
+            Welcome to a new world! Take on the role of a hunter and slay ferocious monsters in a living, breathing ecosystem where you can use the landscape and its diverse inhabitants to get the upper hand. Hunt alone or in co-op with up to three other players, and use materials collected from fallen foes to craft new gear and take on even bigger, badder beasts!<br><br>
+
+            <b><i>Battle gigantic monsters in epic locales.</i></b><br><br>
+
+            As a hunter, you'll take on quests to hunt monsters in a variety of habitats.
+            Take down these monsters and receive materials that you can use to create stronger weapons and armor in order to hunt even more dangerous monsters.<br><br>
+
+            In Monster Hunter: World, the latest installment in the series, you can enjoy the ultimate hunting experience, using everything at your disposal to hunt monsters in a new world teeming with surprises and excitement.<br><br>
+        </p>
+        <p>
+            <i>RELEASE DATE:</i> 9 Aug, 2018<br>
+            <i>DEVELOPER:</i> CAPCOM Co., Ltd.
+        </p>
+        <a href="https://store.steampowered.com/app/582010/Monster_Hunter_World/" target="_blank">
+            <img src="./images/Steam_logo.svg" height="96px" />
+        </a>
+    </div>
+
 </body>
 
 </html>
