steam logo is now fetched from remote

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="content">
-        <img src="images/wallpaper.png" width="75%" style="float: left; margin-right: 32px;" />
+        <img src="./images/wallpaper.png" width="75%" style="float: left; margin-right: 32px;" />
         <h1>Monster Hunter: World</h1>
         <p>
             Welcome to a new world! Take on the role of a hunter and slay ferocious monsters in a living, breathing ecosystem where you can use the landscape and its diverse inhabitants to get the upper hand. Hunt alone or in co-op with up to three other players, and use materials collected from fallen foes to craft new gear and take on even bigger, badder beasts!<br><br>
@@ -31,7 +31,7 @@
             <i>DEVELOPER:</i> CAPCOM Co., Ltd.
         </p>
         <a href="https://store.steampowered.com/app/582010/Monster_Hunter_World/" target="_blank">
-            <img src="./images/Steam_logo.svg" height="96px" />
+            <img src="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" height="64px" />
         </a>
     </div>
 
