finished about page

--- a/about.html
+++ b/about.html
@@ -14,24 +14,15 @@
     </div>
 
     <div class="content">
-        <img src="images/wallpaper.png" width="75%" style="float: left; margin-right: 32px;" />
-        <h1>Monster Hunter: World</h1>
+        <img src="images/n1 v2 circle-blue.svg" width="25%" style="float: left; margin-right: 32px;" />
         <p>
-            Welcome to a new world! Take on the role of a hunter and slay ferocious monsters in a living, breathing ecosystem where you can use the landscape and its diverse inhabitants to get the upper hand. Hunt alone or in co-op with up to three other players, and use materials collected from fallen foes to craft new gear and take on even bigger, badder beasts!<br><br>
+        <h1>Nazareno Piccin</h1>
+        <h5>COMPUTER ENGINEERING STUDENT</h5>
 
-            <b><i>Battle gigantic monsters in epic locales.</i></b><br><br>
-
-            As a hunter, you'll take on quests to hunt monsters in a variety of habitats.
-            Take down these monsters and receive materials that you can use to create stronger weapons and armor in order to hunt even more dangerous monsters.<br><br>
-
-            In Monster Hunter: World, the latest installment in the series, you can enjoy the ultimate hunting experience, using everything at your disposal to hunt monsters in a new world teeming with surprises and excitement.<br><br>
+        Website made for the course "Reti di Calcolatori 2022/2023"
         </p>
-        <p>
-            <i>RELEASE DATE:</i> 9 Aug, 2018<br>
-            <i>DEVELOPER:</i> CAPCOM Co., Ltd.
-        </p>
-        <a href="https://store.steampowered.com/app/582010/Monster_Hunter_World/" target="_blank">
-            <img src="./images/Steam_logo.svg" height="96px" />
+        <a href="https://www.units.it/" target="_blank">
+            <img src="https://www.units.it/sites/all/themes/units_theme/logo-units.png" />
         </a>
     </div>
 
