fixed inconsistencies in relative urls

--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 
 <body>
     <div class="topnav">
-        <a href="./index.html">Monster Hunter: World</a>
-        <a href="./weapons.html">Weapons</a>
-        <a class="active" href="./about.html">About</a>
+        <a href="index.html">Monster Hunter: World</a>
+        <a href="weapons.html">Weapons</a>
+        <a class="active" href="about.html">About</a>
     </div>
 
     <div class="content">
