--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="./index.html">Monster Hunter: World</a>
-        <a href="./weapons.html">Weapons</a>
-        <a href="./about.html">About</a>
+        <a class="active" href="index.html">Monster Hunter: World</a>
+        <a href="weapons.html">Weapons</a>
+        <a href="about.html">About</a>
     </div>
 
     <div class="content">
-        <img src="./images/wallpaper.png" width="75%" style="float: left; margin-right: 32px;" />
+        <img src="images/wallpaper.png" width="75%" style="float: left; margin-right: 32px;" />
         <h1>Monster Hunter: World</h1>
         <p>
             Welcome to a new world! Take on the role of a hunter and slay ferocious monsters in a living, breathing ecosystem where you can use the landscape and its diverse inhabitants to get the upper hand. Hunt alone or in co-op with up to three other players, and use materials collected from fallen foes to craft new gear and take on even bigger, badder beasts!<br><br>
