--- a/weapons.html
+++ b/weapons.html
@@ -8,9 +8,9 @@
 
 <body>
     <div class="topnav">
-        <a href="./index.html">Monster Hunter: World</a>
-        <a class="active" href="./weapons.html">Weapons</a>
-        <a href="./about.html">About</a>
+        <a href="index.html">Monster Hunter: World</a>
+        <a class="active" href="weapons.html">Weapons</a>
+        <a href="about.html">About</a>
     </div>
 
     <div class="content">
@@ -35,6 +35,6 @@
             <li><b>Light Bowgun</b>: High mobility, rapid fire ranged weapon</li>
             <li><b>Heavy Bowgun</b>: Slow but powerful ranged attacks.</li>
         </ol>
-        <img src="./images/MHW_hunters.jpg" width="50%" />
+        <img src="images/MHW_hunters.jpg" width="50%" />
     </div>
 </body>
